src/org/msu/logocompiler/LogoTurtleParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 LogoTurtle.g 2011-03-24 04:13:11

package org.msu.logocompiler;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class LogoTurtleParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "FUNCALL", "FUNCALLSTMT", "BLOCK", "EXPRSTMT", "FLOATCONST", "INTCONST", "OUTPUT", "FUNCDEF", "ARGLIST", "QUOTE", "COLON", "REFOP", "PROGRAM", "ID", "WHILE", "IF", "IFELSE", "FD", "BK", "LT", "RT", "SH", "COMPAREOP", "TERMOP", "FACTOROP", "FLOAT", "INTEGER", "LETTER", "NEWLINE", "COMMENT", "DIGIT", "WHITESPACE", "'to'", "'('", "')'", "'end'", "':'", "'['", "']'", "'output'", "'print'", "'pendown'", "'pd'", "'penup'", "'pu'", "'make'", "'setpos'", "'circle'", "'setpencolor'", "'beginfill'", "'endfill'", "'\"'"
    };
    public static final int EOF=-1;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int FUNCALL=4;
    public static final int FUNCALLSTMT=5;
    public static final int BLOCK=6;
    public static final int EXPRSTMT=7;
    public static final int FLOATCONST=8;
    public static final int INTCONST=9;
    public static final int OUTPUT=10;
    public static final int FUNCDEF=11;
    public static final int ARGLIST=12;
    public static final int QUOTE=13;
    public static final int COLON=14;
    public static final int REFOP=15;
    public static final int PROGRAM=16;
    public static final int ID=17;
    public static final int WHILE=18;
    public static final int IF=19;
    public static final int IFELSE=20;
    public static final int FD=21;
    public static final int BK=22;
    public static final int LT=23;
    public static final int RT=24;
    public static final int SH=25;
    public static final int COMPAREOP=26;
    public static final int TERMOP=27;
    public static final int FACTOROP=28;
    public static final int FLOAT=29;
    public static final int INTEGER=30;
    public static final int LETTER=31;
    public static final int NEWLINE=32;
    public static final int COMMENT=33;
    public static final int DIGIT=34;
    public static final int WHITESPACE=35;

    // delegates
    // delegators


        public LogoTurtleParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public LogoTurtleParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return LogoTurtleParser.tokenNames; }
    public String getGrammarFileName() { return "LogoTurtle.g"; }


        private int mNumLines = 0;
        private int mNumCommands = 0;
        private int mNumIds = 0;
        private int mNumNumbers = 0;
        private int mNumMathOps = 0;
        private int mNumRefOps = 0;
        private int mNumNewlines = 0;
        private int mNumComments = 0;
        
        private void incNumLines() { mNumLines++; }
        private void incNumCommands() { mNumCommands++; }
        private void incNumIds() { mNumIds++; }
        private void incNumNumbers() { mNumNumbers++; }
        private void incNumMathOps() { mNumMathOps++; }
        private void incNumRefOps() { mNumRefOps++; }
        private void incNumNewlines() { mNumNewlines++; }
        private void incNumComments() { mNumComments++; }
        
        public int getNumLines() { return mNumLines; }
        public int getNumCommands() { return mNumCommands; }
        public int getNumMathOps() { return mNumMathOps; }
        public int getNumNumbers() { return mNumNumbers; }
        public int getNumIds() { return mNumIds; }
        public int getNumRefOps() { return mNumRefOps; }
        public int getNumNewlines() { return mNumNewlines; }
        public int getNumComments() { return mNumComments; }
        


    public static class translation_unit_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "translation_unit"
    // LogoTurtle.g:82:1: translation_unit : ( elementary_unit )+ -> ^( PROGRAM ( elementary_unit )+ ) ;
    public final LogoTurtleParser.translation_unit_return translation_unit() throws RecognitionException {
        LogoTurtleParser.translation_unit_return retval = new LogoTurtleParser.translation_unit_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        LogoTurtleParser.elementary_unit_return elementary_unit1 = null;


        RewriteRuleSubtreeStream stream_elementary_unit=new RewriteRuleSubtreeStream(adaptor,"rule elementary_unit");
        try {
            // LogoTurtle.g:83:2: ( ( elementary_unit )+ -> ^( PROGRAM ( elementary_unit )+ ) )
            // LogoTurtle.g:83:4: ( elementary_unit )+
            {
            // LogoTurtle.g:83:4: ( elementary_unit )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=ID && LA1_0<=SH)||(LA1_0>=36 && LA1_0<=37)||(LA1_0>=43 && LA1_0<=54)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // LogoTurtle.g:83:5: elementary_unit
            	    {
            	    pushFollow(FOLLOW_elementary_unit_in_translation_unit161);
            	    elementary_unit1=elementary_unit();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_elementary_unit.add(elementary_unit1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);



            // AST REWRITE
            // elements: elementary_unit
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 83:23: -> ^( PROGRAM ( elementary_unit )+ )
            {
                // LogoTurtle.g:83:26: ^( PROGRAM ( elementary_unit )+ )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PROGRAM, "PROGRAM"), root_1);

                if ( !(stream_elementary_unit.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_elementary_unit.hasNext() ) {
                    adaptor.addChild(root_1, stream_elementary_unit.nextTree());

                }
                stream_elementary_unit.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "translation_unit"

    public static class elementary_unit_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "elementary_unit"
    // LogoTurtle.g:85:1: elementary_unit : ( ( block ) | ( function_definition ) );
    public final LogoTurtleParser.elementary_unit_return elementary_unit() throws RecognitionException {
        LogoTurtleParser.elementary_unit_return retval = new LogoTurtleParser.elementary_unit_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        LogoTurtleParser.block_return block2 = null;

        LogoTurtleParser.function_definition_return function_definition3 = null;



        try {
            // LogoTurtle.g:86:2: ( ( block ) | ( function_definition ) )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( ((LA2_0>=ID && LA2_0<=SH)||LA2_0==37||(LA2_0>=43 && LA2_0<=54)) ) {
                alt2=1;
            }
            else if ( (LA2_0==36) ) {
                alt2=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // LogoTurtle.g:86:4: ( block )
                    {
                    root_0 = (Object)adaptor.nil();

                    // LogoTurtle.g:86:4: ( block )
                    // LogoTurtle.g:86:5: block
                    {
                    pushFollow(FOLLOW_block_in_elementary_unit182);
                    block2=block();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, block2.getTree());

                    }


                    }
                    break;
                case 2 :
                    // LogoTurtle.g:87:4: ( function_definition )
                    {
                    root_0 = (Object)adaptor.nil();

                    // LogoTurtle.g:87:4: ( function_definition )
                    // LogoTurtle.g:87:5: function_definition
                    {
                    pushFollow(FOLLOW_function_definition_in_elementary_unit189);
                    function_definition3=function_definition();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, function_definition3.getTree());

                    }


                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "elementary_unit"

    public static class block_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "block"
    // LogoTurtle.g:89:1: block : ( options {greedy=true; } : statement )+ -> ^( BLOCK ( statement )+ ) ;
    public final LogoTurtleParser.block_return block() throws RecognitionException {
        LogoTurtleParser.block_return retval = new LogoTurtleParser.block_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        LogoTurtleParser.statement_return statement4 = null;


        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        try {
            // LogoTurtle.g:89:6: ( ( options {greedy=true; } : statement )+ -> ^( BLOCK ( statement )+ ) )
            // LogoTurtle.g:90:8: ( options {greedy=true; } : statement )+
            {
            // LogoTurtle.g:90:8: ( options {greedy=true; } : statement )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                alt3 = dfa3.predict(input);
                switch (alt3) {
            	case 1 :
            	    // LogoTurtle.g:90:33: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_block213);
            	    statement4=statement();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_statement.add(statement4.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);



            // AST REWRITE
            // elements: statement
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 90:45: -> ^( BLOCK ( statement )+ )
            {
                // LogoTurtle.g:90:48: ^( BLOCK ( statement )+ )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(BLOCK, "BLOCK"), root_1);

                if ( !(stream_statement.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_statement.hasNext() ) {
                    adaptor.addChild(root_1, stream_statement.nextTree());

                }
                stream_statement.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "block"

    public static class function_definition_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "function_definition"
    // LogoTurtle.g:92:1: function_definition : 'to' ID '(' ( argument )* ')' block 'end' -> ^( FUNCDEF ID ^( ARGLIST ( argument )* ) block ) ;
    public final LogoTurtleParser.function_definition_return function_definition() throws RecognitionException {
        LogoTurtleParser.function_definition_return retval = new LogoTurtleParser.function_definition_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal5=null;
        Token ID6=null;
        Token char_literal7=null;
        Token char_literal9=null;
        Token string_literal11=null;
        LogoTurtleParser.argument_return argument8 = null;

        LogoTurtleParser.block_return block10 = null;


        Object string_literal5_tree=null;
        Object ID6_tree=null;
        Object char_literal7_tree=null;
        Object char_literal9_tree=null;
        Object string_literal11_tree=null;
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_36=new RewriteRuleTokenStream(adaptor,"token 36");
        RewriteRuleTokenStream stream_39=new RewriteRuleTokenStream(adaptor,"token 39");
        RewriteRuleTokenStream stream_37=new RewriteRuleTokenStream(adaptor,"token 37");
        RewriteRuleTokenStream stream_38=new RewriteRuleTokenStream(adaptor,"token 38");
        RewriteRuleSubtreeStream stream_argument=new RewriteRuleSubtreeStream(adaptor,"rule argument");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        try {
            // LogoTurtle.g:93:2: ( 'to' ID '(' ( argument )* ')' block 'end' -> ^( FUNCDEF ID ^( ARGLIST ( argument )* ) block ) )
            // LogoTurtle.g:93:4: 'to' ID '(' ( argument )* ')' block 'end'
            {
            string_literal5=(Token)match(input,36,FOLLOW_36_in_function_definition233); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_36.add(string_literal5);

            ID6=(Token)match(input,ID,FOLLOW_ID_in_function_definition235); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(ID6);

            char_literal7=(Token)match(input,37,FOLLOW_37_in_function_definition237); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_37.add(char_literal7);

            // LogoTurtle.g:93:16: ( argument )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==40) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // LogoTurtle.g:93:17: argument
            	    {
            	    pushFollow(FOLLOW_argument_in_function_definition240);
            	    argument8=argument();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_argument.add(argument8.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            char_literal9=(Token)match(input,38,FOLLOW_38_in_function_definition244); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_38.add(char_literal9);

            pushFollow(FOLLOW_block_in_function_definition246);
            block10=block();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_block.add(block10.getTree());
            string_literal11=(Token)match(input,39,FOLLOW_39_in_function_definition248); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_39.add(string_literal11);



            // AST REWRITE
            // elements: block, argument, ID
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 93:44: -> ^( FUNCDEF ID ^( ARGLIST ( argument )* ) block )
            {
                // LogoTurtle.g:93:47: ^( FUNCDEF ID ^( ARGLIST ( argument )* ) block )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(FUNCDEF, "FUNCDEF"), root_1);

                adaptor.addChild(root_1, stream_ID.nextNode());
                // LogoTurtle.g:93:60: ^( ARGLIST ( argument )* )
                {
                Object root_2 = (Object)adaptor.nil();
                root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(ARGLIST, "ARGLIST"), root_2);

                // LogoTurtle.g:93:70: ( argument )*
                while ( stream_argument.hasNext() ) {
                    adaptor.addChild(root_2, stream_argument.nextTree());

                }
                stream_argument.reset();

                adaptor.addChild(root_1, root_2);
                }
                adaptor.addChild(root_1, stream_block.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "function_definition"

    public static class argument_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "argument"
    // LogoTurtle.g:95:1: argument : ':' ID ;
    public final LogoTurtleParser.argument_return argument() throws RecognitionException {
        LogoTurtleParser.argument_return retval = new LogoTurtleParser.argument_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal12=null;
        Token ID13=null;

        Object char_literal12_tree=null;
        Object ID13_tree=null;

        try {
            // LogoTurtle.g:96:2: ( ':' ID )
            // LogoTurtle.g:97:2: ':' ID
            {
            root_0 = (Object)adaptor.nil();

            char_literal12=(Token)match(input,40,FOLLOW_40_in_argument276); if (state.failed) return retval;
            ID13=(Token)match(input,ID,FOLLOW_ID_in_argument279); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            ID13_tree = (Object)adaptor.create(ID13);
            adaptor.addChild(root_0, ID13_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "argument"

    public static class statement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "statement"
    // LogoTurtle.g:99:1: statement : ( WHILE '[' funcallexpr ']' '[' ( statement )+ ']' -> ^( WHILE funcallexpr ^( BLOCK ( statement )+ ) ) | IF funcallexpr '[' ( statement )+ ']' -> ^( IF funcallexpr ^( BLOCK ( statement )+ ) ) | IFELSE funcallexpr '[' ifblock= block ']' '[' elseblock= block ']' -> ^( IF funcallexpr $ifblock $elseblock) | 'output' funcallexpr -> ^( FUNCALL 'output' funcallexpr ) | ID '(' ( simpleexpr )* ')' -> ^( EXPRSTMT ^( FUNCALL ID ( simpleexpr )* ) ) | '(' 'print' ( options {backtrack=true; } : funcallexpr )+ ')' -> ^( EXPRSTMT ^( FUNCALL 'print' ( funcallexpr )+ ) ) | 'print' funcallexpr -> ^( FUNCALL 'print' funcallexpr ) | 'pendown' -> ^( FUNCALL 'pendown' ) | 'pd' -> ^( FUNCALL 'pendown' ) | 'penup' -> ^( FUNCALL 'penup' ) | 'pu' -> ^( FUNCALL 'penup' ) | FD funcallexpr -> ^( FUNCALL FD funcallexpr ) | BK funcallexpr -> ^( FUNCALL BK funcallexpr ) | LT funcallexpr -> ^( FUNCALL LT funcallexpr ) | RT funcallexpr -> ^( FUNCALL RT funcallexpr ) | SH funcallexpr -> ^( FUNCALL SH funcallexpr ) | 'make' a= funcallexpr b= funcallexpr -> ^( FUNCALL 'make' $a $b) | 'setpos' '[' (int1= funcallexpr ) (int2= funcallexpr ) ']' -> ^( FUNCALL 'setpos' $int1 $int2) | 'circle' (int1= funcallexpr ) (int2= funcallexpr ) -> ^( FUNCALL 'circle' $int1 $int2) | 'setpencolor' '[' (int1= funcallexpr ) (int2= funcallexpr ) (int3= funcallexpr ) ']' -> ^( FUNCALL 'setpencolor' $int1 $int2 $int3) | 'beginfill' -> ^( FUNCALL 'beginfill' ) | 'endfill' -> ^( FUNCALL 'endfill' ) );
    public final LogoTurtleParser.statement_return statement() throws RecognitionException {
        LogoTurtleParser.statement_return retval = new LogoTurtleParser.statement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token WHILE14=null;
        Token char_literal15=null;
        Token char_literal17=null;
        Token char_literal18=null;
        Token char_literal20=null;
        Token IF21=null;
        Token char_literal23=null;
        Token char_literal25=null;
        Token IFELSE26=null;
        Token char_literal28=null;
        Token char_literal29=null;
        Token char_literal30=null;
        Token char_literal31=null;
        Token string_literal32=null;
        Token ID34=null;
        Token char_literal35=null;
        Token char_literal37=null;
        Token char_literal38=null;
        Token string_literal39=null;
        Token char_literal41=null;
        Token string_literal42=null;
        Token string_literal44=null;
        Token string_literal45=null;
        Token string_literal46=null;
        Token string_literal47=null;
        Token FD48=null;
        Token BK50=null;
        Token LT52=null;
        Token RT54=null;
        Token SH56=null;
        Token string_literal58=null;
        Token string_literal59=null;
        Token char_literal60=null;
        Token char_literal61=null;
        Token string_literal62=null;
        Token string_literal63=null;
        Token char_literal64=null;
        Token char_literal65=null;
        Token string_literal66=null;
        Token string_literal67=null;
        LogoTurtleParser.block_return ifblock = null;

        LogoTurtleParser.block_return elseblock = null;

        LogoTurtleParser.funcallexpr_return a = null;

        LogoTurtleParser.funcallexpr_return b = null;

        LogoTurtleParser.funcallexpr_return int1 = null;

        LogoTurtleParser.funcallexpr_return int2 = null;

        LogoTurtleParser.funcallexpr_return int3 = null;

        LogoTurtleParser.funcallexpr_return funcallexpr16 = null;

        LogoTurtleParser.statement_return statement19 = null;

        LogoTurtleParser.funcallexpr_return funcallexpr22 = null;

        LogoTurtleParser.statement_return statement24 = null;

        LogoTurtleParser.funcallexpr_return funcallexpr27 = null;

        LogoTurtleParser.funcallexpr_return funcallexpr33 = null;

        LogoTurtleParser.simpleexpr_return simpleexpr36 = null;

        LogoTurtleParser.funcallexpr_return funcallexpr40 = null;

        LogoTurtleParser.funcallexpr_return funcallexpr43 = null;

        LogoTurtleParser.funcallexpr_return funcallexpr49 = null;

        LogoTurtleParser.funcallexpr_return funcallexpr51 = null;

        LogoTurtleParser.funcallexpr_return funcallexpr53 = null;

        LogoTurtleParser.funcallexpr_return funcallexpr55 = null;

        LogoTurtleParser.funcallexpr_return funcallexpr57 = null;

